// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Portfolio/> Snapshot renders without crashing using mount 1`] = `
<Portfolio>
  <styled.div>
    <div
      className="sc-iemWCZ eughgH"
    >
      <Home>
        <styled.section
          id="home"
        >
          <section
            className="sc-hBMUJo MirVc"
            id="home"
          >
            <h1>
              Israel Deorce
            </h1>
            <styled.p
              className="subtitle"
            >
              <p
                className="sc-fnVZcZ eyxeWs subtitle"
              >
                subtitle
              </p>
            </styled.p>
            <ExternalButtons>
              <styled.div>
                <div
                  className="sc-bdnxRM jJHyKE"
                >
                  <UIButton
                    id="blog-button"
                    label="button.visit_my_blog"
                  >
                    <styled.button
                      onClick={[Function]}
                      secondary={false}
                    >
                      <button
                        className="sc-crzoAE hOvMwS"
                        onClick={[Function]}
                      >
                        <span>
                          button.visit_my_blog
                        </span>
                      </button>
                    </styled.button>
                  </UIButton>
                  <UIButton
                    id="resume-button"
                    label="button.resume"
                    onClick={[Function]}
                    rightIcon={<FaGoogleDrive />}
                    secondary={true}
                  >
                    <styled.button
                      onClick={[Function]}
                      secondary={true}
                    >
                      <button
                        className="sc-crzoAE foTsck"
                        onClick={[Function]}
                      >
                        <span>
                          button.resume
                        </span>
                        <FaGoogleDrive>
                          <IconBase
                            attr={
                              Object {
                                "viewBox": "0 0 512 512",
                              }
                            }
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": undefined,
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
                                key="0"
                              />
                            </svg>
                          </IconBase>
                        </FaGoogleDrive>
                      </button>
                    </styled.button>
                  </UIButton>
                </div>
              </styled.div>
            </ExternalButtons>
          </section>
        </styled.section>
      </Home>
      <Skills>
        <styled.section
          id="skills"
        >
          <section
            className="sc-fFSPTT lEDxj"
            id="skills"
          >
            <h2>
              button.skills
            </h2>
            <styled.div>
              <div
                className="sc-bkbkJK hfkuZi"
              >
                <ProgressIndicator
                  description="skills.software_engineering"
                  percentage={99}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={99}
                          >
                            <div
                              className="sc-ksluID fMRnJV"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.software_engineering
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.front (skills.react)"
                  percentage={90}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={90}
                          >
                            <div
                              className="sc-ksluID gQyraI"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.front (skills.react)
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.back (skills.node, skills.dotnet)"
                  percentage={50}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={50}
                          >
                            <div
                              className="sc-ksluID gSttvk"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.back (skills.node, skills.dotnet)
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.db"
                  percentage={25}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={25}
                          >
                            <div
                              className="sc-ksluID gXCOhW"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.db
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.devops"
                  percentage={50}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={50}
                          >
                            <div
                              className="sc-ksluID gSttvk"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.devops
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.automated_tests"
                  percentage={90}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={90}
                          >
                            <div
                              className="sc-ksluID gQyraI"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.automated_tests
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
              </div>
            </styled.div>
          </section>
        </styled.section>
      </Skills>
    </div>
  </styled.div>
</Portfolio>
`;

exports[`<Portfolio/> Snapshot renders without crashing using render 1`] = `
<div
  class="sc-iemWCZ eughgH"
>
  <section
    class="sc-hBMUJo MirVc"
    id="home"
  >
    <h1>
      Israel Deorce
    </h1>
    <p
      class="sc-fnVZcZ eyxeWs subtitle"
    >
      subtitle
    </p>
    <div
      class="sc-bdnxRM jJHyKE"
    >
      <button
        class="sc-crzoAE hOvMwS"
      >
        <span>
          button.visit_my_blog
        </span>
      </button>
      <button
        class="sc-crzoAE foTsck"
      >
        <span>
          button.resume
        </span>
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
          />
        </svg>
      </button>
    </div>
  </section>
  <section
    class="sc-fFSPTT lEDxj"
    id="skills"
  >
    <h2>
      button.skills
    </h2>
    <div
      class="sc-bkbkJK hfkuZi"
    >
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID fMRnJV"
          />
        </div>
        <div>
          skills.software_engineering
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gQyraI"
          />
        </div>
        <div>
          skills.front (skills.react)
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gSttvk"
          />
        </div>
        <div>
          skills.back (skills.node, skills.dotnet)
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gXCOhW"
          />
        </div>
        <div>
          skills.db
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gSttvk"
          />
        </div>
        <div>
          skills.devops
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gQyraI"
          />
        </div>
        <div>
          skills.automated_tests
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<Portfolio/> Snapshot renders without crashing using shallow 1`] = `
<styled.div>
  <Home />
  <Skills />
</styled.div>
`;
